force-app/main/default/objects/address1__c/address1__c.object-meta.xml
<CustomObject>
    <label>address1</label>
    <nameField>
        <displayFormat>ADD1-{000000}</displayFormat>
        <label>address1 id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>address1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>