force-app/main/default/objects/address1__c/fields/address_line1__c.field-meta.xml
<CustomField>
    <fullName>address_line1__c</fullName>
    <label>address line1</label>
    <type>TextArea</type>
</CustomField>