force-app/main/default/objects/address1__c/fields/appivcant_pan_card__c.field-meta.xml
<CustomField>
    <fullName>appivcant_pan_card__c</fullName>
    <label>appivcant pan card</label>
    <length>10</length>
    <type>Text</type>
</CustomField>