force-app/main/default/objects/address1__c/fields/applicant__c.field-meta.xml
<CustomField>
    <fullName>applicant__c</fullName>
    <label>applicant</label>
    <referenceTo>applicant__c</referenceTo>
    <relationshipLabel>address1</relationshipLabel>
    <relationshipName>address1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>