force-app/main/default/objects/address1__c/fields/applicant_email__c.field-meta.xml
<CustomField>
    <fullName>applicant_email__c</fullName>
    <label>applicant email</label>
    <type>Email</type>
</CustomField>