force-app/main/default/objects/address1__c/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <label>city</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>state__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>city</valueSetName>
    </valueSet>
</CustomField>