force-app/main/default/objects/address1__c/fields/plot_cost__c.field-meta.xml
<CustomField>
    <fullName>plot_cost__c</fullName>
    <label>plot cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>