force-app/main/default/objects/address1__c/validationRules/SHAKIRA.validationRule-meta.xml
<ValidationRule>
    <fullName>SHAKIRA</fullName>
    <active>false</active>
    <errorConditionFormula>$User.Id =&apos;0055i000001RWOY&apos;</errorConditionFormula>
    <errorMessage>shakira mid not creat record</errorMessage>
</ValidationRule>