force-app/main/default/objects/address1__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>applicant__c</columns>
    <columns>city__c</columns>
    <columns>country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>